# fast-api-template

./: .gitignore  Makefile  README.md  docker-compose.yaml  foo.yaml  main.py  pyproject.toml  start.sh
.github/workflows/: python-app.yml
alembic/: env.py
alembic/versions/: 562f8281d2ff_initial_migration.py
app/: __init__.py
app/api/: __init__.py
app/api/health/: api.py
app/api/todos/: __init__.py  api.py  models.py  schemas.py  services.py
app/api/users/: __init__.py  api.py  models.py  schemas.py  services.py
app/core/: config.py
app/database/: config.py
app/middleware/: logger.py
app/utils/: common.py  dependencies.py  headers.py  logger.py
tests/: conftest.py  test_todo_service.py  test_user_service.py
