[project]
name = "fapoc"
version = "0.1.0"
description = "Default template for PDM package"
authors = [{ name = "Melvin Almonte", email = "melvinalmonte@gmail.com" }]
dependencies = [
    "fastapi[standard]>=0.111.1",
    "pydantic-settings>=2.4.0",
    "sqlalchemy>=2.0.31",
    "psycopg2-binary>=2.9.9",
    "alembic>=1.13.2",
    "testcontainers>=4.7.2",
    "pytest>=8.3.2",
    "pytest-mock>=3.14.0",
]
requires-python = "==3.12.*"
readme = "README.md"
license = { text = "MIT" }


[tool.pdm]
distribution = false

[tool.pdm.dev-dependencies]
dev = [
    "ruff>=0.5.5",
]
[tool.pyright]
venvPath = "."
venv = ".venv"
